...
    val viewModel by viewModels<InventoryViewModel>()

    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContent {
            Page(
                back = { viewModel.back() },
                onFinishInventoryButtonClick = { viewModel.onInventoryFinishButtonClick() },
                loading = viewModel.loading,
                scanning = viewModel.rf.scanning,
                sexTileFilterValues = viewModel.sexTileFilterValues,
                sexTileFilterValue = viewModel.sexTileFilterValue,
                scanFilter = viewModel.scanFilter,
...
    onFinishInventoryButtonClick: () -> Unit,
) {

    if (!loading) {

        if (isInShortageAdditionalPage && isInventoryStarted) {
            BottomBarButton(text = "پایان انبارگردانی", onClick = onFinishInventoryButtonClick)
        } else if (!isInShortageAdditionalPage) {
            if (isInventoryStarted) {
                BottomBarButton(text = "مغایرت ها") {
                    onInventoryConflictButtonClick()
                    //isInShortageAdditionalPage = true
                }
            } else {
                BottomBarButton("شروع انبارگردانی") {
                    startInventory()
                }
            }
        }
    }
}
...
                        .align(Alignment.CenterVertically)
                        .padding(start = 16.dp)
                        .weight(1F)
                )

                Text(
                    text = "اضافی: $additionalNumber",
                    textAlign = TextAlign.Right,
                    modifier = Modifier
                        .align(Alignment.CenterVertically)
                        .padding(start = 16.dp)
                        .weight(1F)
                )
                Row(
                    modifier = Modifier
                        .padding(start = 16.dp)
                        .weight(1F)
                ) {
                    FilterDropDownList(
                        icon = { },
                        text = {
                            Text(
                                text = scanFilter,
                                style = MaterialTheme.typography.bodyMedium,
                                modifier = Modifier
...
                        })
                }
            }

            LazyColumn(modifier = Modifier.padding(bottom = 56.dp)) {

                items(uiList.size) { i ->

                    Item(
                        i,
                        uiList,
                        text3 = "موجودی: " + uiList[i].inventoryNumber,
                        text4 = uiList[i].inventoryConflictType + ":" + " " + uiList[i].inventoryConflictAbs,
...
