...

                                Button(
                                    onClick = {
                                        exitProductFromshelf()
                                    }, modifier = Modifier
                                        .padding(top = 10.dp, end = 16.dp)
                                        .testTag("notConfirm")
                                )
                                {
                                    if (!openShelfExitFocus) Text(text = "خیر") else Text(text = "انصراف")
                                }
                                Button(
                                    onClick = {
...
                                        } else {
                                            addProductToOtherShelf()
                                        }
                                    },
                                    modifier = Modifier
                                        .padding(top = 10.dp)
                                        .testTag("confirm")
                                ) {
                                    if (!openShelfExitFocus) Text("بله") else Text("ورود")
                                }
                            }
                        }
                    }
                )
            } else {
...
//                        .background(
//                            shape = RoundedCornerShape(36.dp),
//                            color = errorContainerLight
//                        )
//                        .size(30.dp)
//                        .align(Alignment.TopEnd)
//                        .testTag("clear")
//                        .clickable {
//                            clear(uiList[i])
//                        }
//                ) {
//                    Icon(
//                        painter = painterResource(id = R.drawable.ic_baseline_clear_24),
...
