...
            ) {
                item {
                    if (viewModel.openAccountDialog) {
                        AlertDialogWith2ButtonAndAppVersion(
                            title = viewModel.userFullName,
                            appVersion = viewModel.appVersion,
                            btnConfirm = "خروج از حساب",
                            btnNotConfirm = "ارسال و دریافت",
                            btnNotConfirmOnClick = {
                                viewModel.openAccountDialog = false
                                viewModel.onSyncButtonClick()
                            },
                            btnConfirmOnClick = {
...
                        value = viewModel.locationCode,
                        keyboardType = KeyboardType.Number,
                    )
                }
            }

            BigButton(text = "ورود") {
                viewModel.login()
            }
        }
    }
}

...
