...
    onNavigationButtonPressed: () -> Unit = {},
    testTag: String = "",
) {
    TopAppBar(
        navigationIcon = {
            IconButton(
                modifier = Modifier.testTag("navigation"),
                onClick = { onNavigationButtonPressed() }) {
                Icon(
                    imageVector = imageVector,
                    contentDescription = "",
                    Modifier.testTag(
                        if (testTag != "") testTag else ""
...
