...
                    value = defaultText, onValueChange = {
                        onValueChange(it)
                    },
                    modifier = Modifier
                        .padding(top = 10.dp, start = 10.dp, end = 10.dp)
                        .align(Alignment.CenterHorizontally)
                        .testTag("alertDialogInput")
                )

                Button(
                    modifier = Modifier
                        .padding(
                            bottom = 12.dp,
...
